--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
             justify-content: center;
             align-items: center;
             flex-direction: column;
+            margin: 0;
+            padding: 20px;
         }
         img {
             margin: 20px;
@@ -25,9 +27,9 @@
 <body>
     <h1>Image Gallery</h1>
     
-    <img src="https://raw.githubusercontent.com/picalabsuperadmin/image/main/HeroCoin-s.png" alt="HeroCoin Small">
-    <img src="https://raw.githubusercontent.com/picalabsuperadmin/image/main/HeroCoin.png" alt="HeroCoin">
-    <img src="https://raw.githubusercontent.com/picalabsuperadmin/image/main/logo.svg" alt="Logo">
+    <img src="HeroCoin-s.png" alt="HeroCoin Small">
+    <img src="HeroCoin.png" alt="HeroCoin">
+    <img src="logo.svg" alt="Logo">
 
 </body>
 </html>
