--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
     
     <img src="HeroCoin-s.png" alt="HeroCoin Small">
     <img src="HeroCoin.png" alt="HeroCoin">
-    <img src="logo.svg" alt="Logo">
+    <img src="WUSD.png" alt="WUSD">
+    <img src="WUSD-s.png" alt="WUSD Small">
+    
 
 </body>
 </html>
