--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                 <button onclick="copyToClipboard('https://pica-lab.github.io/image/your-repo-name/WUSD.png')">Copy URL</button>
             </div>
             <div class="image-box">
-                <img src="https://pica-lab.github.io/image/logo.svg" alt="Logo">
-                <button onclick="copyToClipboard('https://pica-lab.github.io/image/logo.svg')">Copy URL</button>
+                <img src="https://pica-lab.github.io/image/logo.png" alt="Logo">
+                <button onclick="copyToClipboard('https://pica-lab.github.io/image/logo.png')">Copy URL</button>
             </div>
             <!-- Add more images as needed -->
         </div>
